2006-11-13  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.0.3.

	* mh-e.el (Version, mh-version): Update for release 8.0.3.

	* mh-e.el (mh-alias-local-users): Boolean docstrings should start
	with "Non-nil means". Perhaps this option should have a -flag
	appended.
	(mh-junk-background): Sync docstring with manual.

	* mh-junk.el (mh-spamassassin-blacklist, mh-bogofilter-blacklist)
	(mh-spamprobe-blacklist): Sync docstring with manual.

2006-11-11  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* mh-junk.el (mh-spamassassin-blacklist, mh-spamassassin-whitelist): 
	Use mh-junk-background consistently in call-process calls.

	* (mh-bogofilter-blacklist, mh-bogofilter-whitelist,
	mh-spamprobe-blacklist, mh-spamprobe-whitelist): Use
	with-current-buffer so the right thing happens if
	mh-junk-background is t (closes SF #1594802).

	* mh-e.el (mh-junk-background): Document that On value is 0;
	t may be used for debugging.
	
2006-11-10  Andreas Schwab  <schwab@suse.de>

	* mh-e.el (mh-draft-folder): Avoid starting sentence with "nil".

2006-11-10  Glenn Morris  <rgm@gnu.org>

	* mh-e.el (mh-draft-folder): Doc fix (Nil -> nil).

2006-09-25  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* mh-junk.el (mh-spamassassin-whitelist): Add two missing
	quotation marks, so that the last two arguments of sa-learn
	are separated properly (closes SF #1565460).

	* (mh-spamassassin-blacklist): In example .procmailrc, add
	PATH element to find mhparam on Debian.

2006-09-24  Stephen Gildea  <gildea@stop.mail-abuse.org>

	* mh-comp.el (mh-send-args): Initialize to "" instead of nil
	so that we always have a valid string for split-string even if
	nothing is added in mh-send-letter (closes SF #1564742).

2006-07-03  Bill Wohler  <wohler@newt.com>

	Release MH-E version 8.0.2.

	* mh-e.el (Version, mh-version): Update for release 8.0.2.

2006-07-03  Ted Phelps  <phelps@gnusto.com>  (tiny change)

	* mh-tool-bar.el (mh-tool-bar-define): Fix XEmacs' vector-list so